--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
+    "playwright>=1.50.0",
     "browser-use>=0.1.40",
 ]
 readme = "README.md"
